Fix support for accessible action verbs and performing the default action.

Accessible objects support a "default action" if something happens when
you click on them. On some platforms we return a localized string like
"press" or "uncheck" indicating what action will occur. This change fixes
a few cases that weren't correct:

1. A few objects had actions but no verb - fix this by adding a verb for
   pop-up buttons ("open") and a default verb when nothing else applies
   ("click").

2. Ensure we always return an action verb when an object has a default
   action, and never otherwise.

3. Fix detection of click event listeners - we were using an API that
   only returned some; use the right API to get all click-and-mouse-related
   event listeners, but exclude the HTML BODY element because lots of
   pages have click listeners there and they're rarely what we want.

4. The Windows API accDoDefaultAction should return an error if called on
   an object with no default action.

BUG=595222

Review URL: https://codereview.chromium.org/1809573003

Cr-Commit-Position: refs/heads/master@{#381911}

Former-commit-id: 30fc95f3dd93562d7be852205c49bd49e793d84c